k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gearworkssmp-com-dev
  annotations:
    linkerd.io/inject: enabled
    config.linkerd.io/skip-outbound-ports: "443"
