k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: gearworkssmp-com-dev
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
