k8s/dev/maps-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maps-northwest
  namespace: gearworkssmp-com-dev
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gearworkssmp-com.9m.se`) && PathPrefix(`/maps/northwest`)
      services:
        - name: maps-northwest
          port: 80
      middlewares:
        - name: authentik-forwardauth
        - name: strip-maps-northwest
  tls:
    secretName: gearworkssmp-com-dev-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maps-northeast
  namespace: gearworkssmp-com-dev
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gearworkssmp-com.9m.se`) && PathPrefix(`/maps/northeast`)
      services:
        - name: maps-northeast
          port: 80
      middlewares:
        - name: authentik-forwardauth
        - name: strip-maps-northeast
  tls:
    secretName: gearworkssmp-com-dev-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maps-southwest
  namespace: gearworkssmp-com-dev
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gearworkssmp-com.9m.se`) && PathPrefix(`/maps/southwest`)
      services:
        - name: maps-southwest
          port: 80
      middlewares:
        - name: authentik-forwardauth
        - name: strip-maps-southwest
  tls:
    secretName: gearworkssmp-com-dev-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maps-southeast
  namespace: gearworkssmp-com-dev
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gearworkssmp-com.9m.se`) && PathPrefix(`/maps/southeast`)
      services:
        - name: maps-southeast
          port: 80
      middlewares:
        - name: authentik-forwardauth
        - name: strip-maps-southeast
  tls:
    secretName: gearworkssmp-com-dev-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maps-creative
  namespace: gearworkssmp-com-dev
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gearworkssmp-com.9m.se`) && PathPrefix(`/maps/creative`)
      services:
        - name: maps-creative
          port: 80
      middlewares:
        - name: authentik-forwardauth
        - name: strip-maps-creative
  tls:
    secretName: gearworkssmp-com-dev-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maps-mining
  namespace: gearworkssmp-com-dev
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gearworkssmp-com.9m.se`) && PathPrefix(`/maps/mining`)
      services:
        - name: maps-mining
          port: 80
      middlewares:
        - name: authentik-forwardauth
        - name: strip-maps-mining
  tls:
    secretName: gearworkssmp-com-dev-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maps-skylands
  namespace: gearworkssmp-com-dev
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gearworkssmp-com.9m.se`) && PathPrefix(`/maps/skylands`)
      services:
        - name: maps-skylands
          port: 80
      middlewares:
        - name: authentik-forwardauth
        - name: strip-maps-skylands
  tls:
    secretName: gearworkssmp-com-dev-tls
